--- a/ios/dyrtTechChallenge/Info.plist
+++ b/ios/dyrtTechChallenge/Info.plist
@@ -46,5 +46,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+    <string>We need your location to provide relevant information about nearby campgrounds.</string>
 </dict>
 </plist>
